--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -20,13 +20,10 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4:latest
     environment:
-      PGADMIN_DEFAULT_EMAIL: abdullah@local.com
+      PGADMIN_DEFAULT_EMAIL: localhost@localhost.com
       PGADMIN_DEFAULT_PASSWORD: 123456
     ports:
       - 5050:80
-  
-
-
 volumes:
   postgresql_data:
     driver: local
